--- a/hhmWebsite/horseHealthMonitoring/team.html
+++ b/hhmWebsite/horseHealthMonitoring/team.html
@@ -22,8 +22,8 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Horse Health Monitoring</a></h1>
-								</div>
+								<h1><a href="../index.html">Horse Health Monitoring</a></h1>
+							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
