--- a/horseHealthMonitoring/gallery.html
+++ b/horseHealthMonitoring/gallery.html
@@ -28,7 +28,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="../index.html">Home</a></li>
+									<li class="current"><a href="../../index.html">Home</a></li>
 									<li>
 										<a href="deliverables.html">Deliverables</a>
 									</li>
