Added images to website.

--- a/horseHealthMonitoring/deliverables.html
+++ b/horseHealthMonitoring/deliverables.html
@@ -22,7 +22,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="../index.html">Horse Health Monitoring</a></h1>
+								<h1><a href="../../index.html">Horse Health Monitoring</a></h1>
 							</div>
 
 						<!-- Nav -->
@@ -93,6 +93,7 @@
 								</tr>
 								<tr>
 									<th>Final Presentation</th>
+									<th><a href="assets\docs\HorseHealthMonitoring_FinalPresentation_Draft.pptx"><img src="images\documentImage.png"></a></th>
 								</tr>
 								<tr>
 									<th>Final Design Document I</th>
