--- a/horseHealthMonitoring/data.html
+++ b/horseHealthMonitoring/data.html
@@ -22,7 +22,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="../index.html">Horse Health Monitoring</a></h1>
+								<h1><a href="../../index.html">Horse Health Monitoring</a></h1>
 							</div>
 
 						<!-- Nav -->
