added final presentation

--- a/horseHealthMonitoring/deliverables.html
+++ b/horseHealthMonitoring/deliverables.html
@@ -94,6 +94,7 @@
 								<tr>
 									<th>Final Presentation</th>
 									<th><a href="assets\docs\HorseHealthMonitoring_FinalPresentation_Draft.pptx"><img src="images\documentImage.png"></a></th>
+									<th><a href="assets\docs\HorseHealthMonitoring_FinalPresentation_Final.ppsx"><img src="images\documentImage.png"></a></th>
 								</tr>
 								<tr>
 									<th>Final Design Document I</th>
