Added final design docs

--- a/horseHealthMonitoring/deliverables.html
+++ b/horseHealthMonitoring/deliverables.html
@@ -86,10 +86,12 @@
 								<tr>
 									<th>Executive Summary</th>
 									<th><a href="assets\docs\HorseHealthMonitoring_ExecutiveSummary_Draft.docx"><img src="images\documentImage.png"></a></th>
+									<th><a href="assets\docs\HorseHealthMonitoring_ExecutiveSummary_Final.docx"><img src="images\documentImage.png"></a></th>
 								</tr>
 								<tr>
 									<th>Evaluation</th>
 									<th><a href="assets\docs\HorseHealthMonitoring_Evaluation_Draft.docx"><img src="images\documentImage.png"></a></th>
+									<th><a href="assets\docs\HorseHealthMonitoring_Evaluation_Final.docx"><img src="images\documentImage.png"></a></th>
 								</tr>
 								<tr>
 									<th>Final Presentation</th>
