made some changes.

--- a/horseHealthMonitoring/data.html
+++ b/horseHealthMonitoring/data.html
@@ -51,8 +51,8 @@
 							<tbody class="default">
 								<thead class="default">Code</thead>
 								<tr>
-									<th>Document</th>
-									<th>Link</th>
+									<th>hhm_rev5</th>
+									<th><a href=""><img src="images\documentImage.png"></a></th>
 								</tr>
 						</table>
 						<table class="default">
