Added design data to website.

--- a/horseHealthMonitoring/data.html
+++ b/horseHealthMonitoring/data.html
@@ -52,25 +52,30 @@
 								<thead class="default">Code</thead>
 								<tr>
 									<th>hhm_rev5</th>
-									<th><a href=""><img src="images\documentImage.png"></a></th>
+									<th><a href="assets\hhm_rev5.zip"><img src="images\documentImage.png"></a></th>
 								</tr>
 						</table>
 						<table class="default">
 							<tbody class="default">
 								<thead class="default">Datasheets</thead>
 								<tr>
-									<th>Document</th>
-									<th>Link</th>
+									<th>Arduino Datasheet</th>
+									<th><a href="assets\docs\HorseHealthMonitoring_ArduinoDatasheet.pdf"><img src="images\documentImage.png"></a></th>
 								</tr>
-						</table>
-						<table class="default">
-							<tbody class="default">
-								<thead class="default">Design Files</thead>
 								<tr>
-									<th>Document</th>
-									<th>Link</th>
+									<th>SIM800H Datasheet</th>
+									<th><a href="assets\docs\HorseHealthMonitoring_SIM800HDatasheet.pdf"><img src="images\documentImage.png"></a></th>
+								</tr>
+								<tr>
+									<th>Pulse Sensor Amped Arduino Datasheet</th>
+									<th><a href="assets\docs\HorseHealthMonitoring_PulseSensorAmpedDatasheet.pdf"><img src="images\documentImage.png"></a></th>
+								</tr>
+								<tr>
+									<th>DS18B20 Datasheet</th>
+									<th><a href="assets\docs\HorseHealthMonitoring_DS18B20Datasheet.pdf"><img src="images\documentImage.png"></a></th>
 								</tr>
 						</table>
+					</div>
 					</div>
 				</div>
 
